force-app/main/default/objects/BPMNotificationLog__c/BPMNotificationLog__c.object-meta.xml
<CustomObject>
    <label>BPMNotificationLog</label>
    <nameField>
        <displayFormat>BPM-{0000000}</displayFormat>
        <label>BPMNotificationLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPMNotificationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>