force-app/main/default/objects/BPMNotificationLog__c/fields/Action_Owner_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner_Role_Name__c</fullName>
    <label>Action Owner Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>