force-app/main/default/objects/BPMNotificationLog__c/fields/BPM_Annuity__c.field-meta.xml
<CustomField>
    <fullName>BPM_Annuity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPM Annuity</label>
    <referenceTo>BPM_Annuity__c</referenceTo>
    <relationshipLabel>BPMNotificationLogs</relationshipLabel>
    <relationshipName>BPMNotificationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>