force-app/main/default/objects/BPMNotificationLog__c/fields/CCPerson__c.field-meta.xml
<CustomField>
    <fullName>CCPerson__c</fullName>
    <label>CCPerson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>