force-app/main/default/objects/BPMNotificationLog__c/fields/Hold_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason_Type__c</fullName>
    <label>Hold Reason Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>