force-app/main/default/objects/BPMNotificationLog__c/fields/ToPerson__c.field-meta.xml
<CustomField>
    <fullName>ToPerson__c</fullName>
    <label>ToPerson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>